# jshift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  jshift_for_data_engineering.md
.github/workflows/: ci.yml
benches/: README.md  json_benchmark.rs  project_benchmark.rs
examples/: alloc_profile.rs  array_insert_bench.rs  gen_heavy_parallel_fixture.rs  gen_jsonl_fixture.rs  hero_matrix.rs  jsonl_bench.rs  rss_project_profile.rs  typed_doc_bench.rs  v06_collections_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: find_value.rs  mutate_ops.rs  parse_path.rs  project_jmespath.rs  project_paths.rs  valid_json_ops.rs
jshift-derive/: Cargo.toml  README.md
jshift-derive/src/: lib.rs
scripts/: build_large_catalog.sh  fetch_teefury.sh  measure_rss.sh
src/: batch.rs  build.rs  collect.rs  convert.rs  document.rs  error.rs  index.rs  jsonl.rs  lib.rs  limits.rs  map_view.rs  merge_patch.rs  mutate.rs  nested.rs  path.rs  project.rs  raw.rs  scan.rs  typed_doc.rs  validate.rs  view.rs  view_list.rs
src/project/: emit.rs  focus.rs  jmespath.rs  mod.rs  plan.rs  select.rs  sink.rs  transform.rs
tests/: jmespath_compliance.rs  jmespath_features.rs  teefury_project.rs
