[package]
name = "jshift"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Shan Alexander Newton"]
description = "Schema-guided, safe in-place JSON path reader and mutator for raw byte buffers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/shan-alexander/jshift"
homepage = "https://github.com/shan-alexander/jshift"
documentation = "https://docs.rs/jshift"
readme = "README.md"
keywords = ["json", "in-place", "mutator", "parser", "zero-copy"]
categories = ["parser-implementations", "data-structures"]
exclude = [
    "/docs/",
    "/target/",
    "/fuzz/",
    # Large real-world fixtures stay local / in a separate bench repo — never crates.io.
    "/benches/**/*.json",
    "/benches/datasets/",
    "/benches/data/",
]

[features]
default = ["derive"]
# Proc-macro schemas: JsonMutatorSchema / JsonView derive.
derive = ["dep:jshift-derive"]
# Parallel list projections (rayon) for large indexed arrays — still 100% safe Rust.
parallel = ["dep:rayon"]
# In-process heap profiling for `examples/alloc_profile` (writes dhat-heap.json).
# Not for production: replaces the global allocator in that example only.
dhat-heap = ["dep:dhat"]

[dependencies]
memchr = "2.7"
jshift-derive = { version = "0.4.0", path = "./jshift-derive", optional = true }
rayon = { version = "1.8", optional = true }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = "0.5"
rayon = "1.8"
gjson = "0.8"
sonic-rs = "0.5"

[[bench]]
name = "json_benchmark"
harness = false

[[bench]]
name = "project_benchmark"
harness = false

[workspace]
members = ["jshift-derive"]
